[package]
name = "common"
version = "0.1.0"
authors = ["Daragh <daragh.king.2014@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arff = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"