[package]
name = "main"
version = "0.1.0"
authors = ["Daragh <daragh.king.2014@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }
decision-tree = { path = "../decision-tree/" }
multi-target-decision-tree = { path = "../multi-target-decision-tree/" }
multi-target-grad-boost = { path = "../multi-target-grad-boost/" }