[package]
name = "multi-target-grad-boost"
version = "0.1.0"
authors = ["Daragh <daragh.king.2014@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common/" }
multi-target-decision-tree = { path = "../multi-target-decision-tree/" }
rayon = "1.5"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "bench" 
harness = false